[tool.poetry]
name = "reverse-proxy"
version = "0.1.0"
description = ""
authors = ["Vadym Stupakov <vadim.stupakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
requests = "^2.31.0"
expression = {extras = ["pydantic"], version = "^5.0.2"}
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
