[tool.poetry]
name = "reverse-proxy"
version = "0.1.0"
description = ""
authors = ["Vadym Stupakov <vadim.stupakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
flask-socketio = "^5.3"
requests = "^2.3"
waitress = "^3.0"

[tool.poetry.scripts]
reverse_proxy = "reverse_proxy.proxy_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
